update homepage in json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popcorn",
-  "homepage": "https://rawanselima.github.io/popcorn",
+  "homepage": "https://rawanselima.github.io/moviePopcorn",
   "private": true,
   "version": "0.0.0",
   "type": "module",
